Quick fix for better contrast and readability of ratings

--- a/src/components/List/index.css
+++ b/src/components/List/index.css
@@ -78,6 +78,7 @@
   transform: translateX(-50%);
   font-size: 13px;
   z-index: 1;
+  text-shadow: 1px 1px 2px rgba(0,0,0,0.6);
 }
 
 
